--- a/index.html
+++ b/index.html
@@ -238,102 +238,343 @@
   </section>
 
   <section class="all-products">
-      <div class="all-products__left">
+    <div class="all-products__left">
 
-        <!-- Headline -->
-        <div class="headline">
-          <p>All Products</p>
-          <h2>Mild skincare & facial routine</h2>
+      <!-- Headline -->
+      <div class="headline">
+        <h6 class="headline-title">All Products</h6>
+        <h2 class="headline-subtitle">Mild skincare & facial routine</h2>
+      </div>
+
+      <!-- Listing Categories -->
+      <div class="listing-categories">
+        <div class="listing-categories__row">
+          <button class="category active-btns">All Needs</button>
+          <button class="category btns">Protect</button>
+          <button class="category btns">Regenerates</button>
         </div>
 
-        <!-- Listing Categories -->
-        <div class="listing-categories">
-          <button class="category active">All Needs</button>
-          <button class="category">Protect</button>
-          <button class="category">Regenerates</button>
-          <button class="category">Revitalize</button>
-          <button class="category">Feeds</button>
-          <button class="category">Regulates</button>
-          <button class="category">Purifies</button>
-          <button class="category">Makeup Removal</button>
-          <button class="category">Exfoliate</button>
-          <button class="category">Antioxidant</button>
-          <button class="category">Soothe</button>
-          <button class="category">Smoothen skin texture</button>
-          <button class="category">Tones</button>
-          <button class="category">Anti-waste</button>
-          <button class="category">Hydrate</button>
-          <button class="category">Strengthens</button>
-          <button class="category">Regenerates after UV exposure. Strengthens</button>
+        <div class="listing-categories__row">
+          <button class="category btns">Revitalize</button>
+          <button class="category btns">Feeds</button>
+          <button class="category btns">Regulates</button>
+          <button class="category btns">Purifies</button>
+        </div>
+
+        <div class="listing-categories__row">
+          <button class="category btns">Makeup Removal</button>
+          <button class="category btns">Exfoliate</button>
+          <button class="category btns">Antioxidant</button>
+        </div>
+
+        <div class="listing-categories__row">
+          <button class="category btns">Soothe</button>
+          <button class="category btns">Smoothen skin texture</button>
+          <button class="category btns">Tones</button>
+        </div>
+
+        <div class="listing-categories__row">
+          <button class="category btns">Anti-waste</button>
+          <button class="category btns">Hydrate</button>
+          <button class="category btns">Strengthens</button>
+        </div>
+
+        <div class="listing-categories__row">
+          <button class="category btns">Regenerates after UV exposure. Strengthens</button>
         </div>
 
       </div>
 
-      <div class="all-products__right">
+    </div>
 
-        <!-- Product Rows -->
-        <div class="product-row">
-          <div class="product-card">
-            <img src="img/product1.png" alt="CLASSYWIG">
-            <h3>CLASSYWIG</h3>
-            <p>$20</p>
-            <div class="product-rating__stars">
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-            </div>
-          </div>
+    <div class="all-products__right">
 
-          <div class="product-card">
-            <img src="img/product2.png" alt="HOLCANE">
-            <h3>HOLCANE</h3>
-            <p>$23</p>
-            <div class="product-rating__stars">
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+      <!-- Product Rows -->
+      <div class="product-row">
+        <div class="product-card">
+          <img src="img/product 1.png" alt="CLASSYWIG" class="product__image">
+          <div class="product__desc">
+            <h6 class="product__name">CLASSYWIG</h6>
+            <p class="product__price">$20</p>
+            <div class="rating2">
+              <div class="product-rating__stars">
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+              </div>
+              <p class="ratings_number">5.0</p>
             </div>
           </div>
         </div>
 
-        <div class="product-row">
-          <div class="product-card">
-            <img src="img/product3.png" alt="INAMORATA">
-            <h3>INAMORATA</h3>
-            <p>$12</p>
-            <div class="product-rating__stars">
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+        <div class="product-card">
+          <img src="img/product 2.png" alt="HOLCANE" class="product__image">
+          <div class="product__desc">
+            <h6 class="product__name">HOLOCANE</h6>
+            <p class="product__price">$23</p>
+            <div class="rating2">
+              <div class="product-rating__stars">
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+              </div>
+              <p class="ratings_number">5.0</p>
             </div>
           </div>
+        </div>
+      </div>
 
-          <div class="product-card">
-            <img src="img/product4.png" alt="LIGHTCOOL">
-            <h3>LIGHTCOOL</h3>
-            <p>$225</p>
-            <div class="product-rating__stars">
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
-              <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+      <div class="product-row">
+        <div class="product-card">
+          <img src="img/product 3.png" alt="INAMORATA" class="product__image">
+
+          <div class="product__desc">
+            <h6 class="product__name">INAMORATA</h6>
+            <p class="product__price">$12</p>
+            <div class="rating2">
+              <div class="product-rating__stars">
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+              </div>
+              <p class="ratings_number">5.0</p>
             </div>
           </div>
         </div>
 
-        <!-- CTA Button -->
-        <div class="btn">
-          <button>Shop more <span class="arrow">→</span></button>
+        <div class="product-card">
+          <img src="img/product 4.png" alt="LIGHTCOOL" class="product__image">
+
+          <div class="product__desc">
+            <h6 class="product__name">LIGHTCOOL</h6>
+            <p class="product__price">$22.5</p>
+            <div class="rating2">
+              <div class="product-rating__stars">
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+                <span class="star"><img src="img/Star.svg" alt="Star Icon"></span>
+              </div>
+              <p class="ratings_number">5.0</p>
+            </div>
+          </div>
+
+
         </div>
+      </div>
+
+      <a href="#" class="shop-cta">
+        <span class="shop-cta__text">Shop now</span>
+        <img src="img/Arrow-right dark.svg" alt="Arrow Right" class="shop-cta__icon" />
+      </a>
     </div>
   </section>
+
+  <section class="try-service">
+    <div class="try-service__content">
+      <div class="try-service__content--headline">
+        <h6 class="try-service__content--pretitle">Try Our Service</h6>
+        <h2 class="try-service__content--title">Your skin diagnosis in<br>3 minutes</h2>
+        <p class="try-service__content--subtitle">
+          Say hello to a more radiant, healthier you with personalized<br>
+          skincare that's as unique as you are.
+        </p>
+      </div>
+
+      <a href="#" class="shop-cta">
+        <span class="shop-cta__text">Start my diagnosis</span>
+        <img src="img/Arrow-right dark.svg" alt="Arrow Right" class="shop-cta__icon">
+      </a>
+    </div>
+
+    <div class="try-service__image">
+      <img src="img/Image ilustrations.png" alt="Line Art Face Illustration" />
+    </div>
+  </section>
+
+
+  <section class="testimonials">
+
+    <!-- Image Produk -->
+    <div class="testimonials__image">
+      <img src="img/testimonial.png" alt="Velvety Holocena Product" />
+    </div>
+
+    <!-- Konten Testimoni -->
+    <div class="testimonials__content">
+      <h6 class="testimonials__content--title">Product Testimonials</h6>
+
+      <!-- Rating Bintang -->
+      <div class="testimonials__content--text">
+        <div class="testimonials__rating">
+          <img src="img/star.svg" alt="star" class="starsvg" />
+          <img src="img/star.svg" alt="star" class="starsvg" />
+          <img src="img/star.svg" alt="star" class="starsvg" />
+          <img src="img/star.svg" alt="star" class="starsvg" />
+          <img src="img/star.svg" alt="star" class="starsvg" />
+        </div>
+
+        <!-- Teks Ulasan -->
+        <h3 class="testimonials__text">
+          “I’ve been feeling pretty stressed with my skin lately, so I picked up a set of HOLOCENA skincare.
+          Oh my goodness!. It was AMAZING. My skin felt so soft and moisturized”
+        </h3>
+
+        <cite class="testimonials__author">- Customer Review</cite>
+      </div>
+    </div>
+
+    <!-- Slider Navigasi -->
+    <div class="testimonials__slider">
+      <img src="img/Arrow-right dark.svg" alt="Arrow-Right" class="arrow arrow--right" />
+
+      <div class="dot">
+        <span class="dot1"></span>
+        <span class="dot2"></span>
+        <span class="dot3"></span>
+        <span class="dot4"></span>
+      </div>
+
+      <img src="img/Arrow-right dark.svg" alt="Arrow-Left" class="arrow arrow--left" />
+    </div>
+  </section>
+
+
+  <section class="cta02">
+    <!-- CTA02 1 -->
+    <div class="cta02__item">
+      <img src="img/Happy Skin.png" alt="Loyalty Icon" class="cta02__icon" />
+      <div class="head-text">
+        <p class="cta02__subtitle">Loyalty Program</p>
+        <h5 class="cta02__title">For Happy Skin</h5>
+      </div>
+      <a href="#" class="shop-cta">
+        <span class="shop-cta__text">Join the program</span>
+        <img src="img/Arrow-right dark.svg" alt="Arrow Right" class="shop-cta__icon" />
+      </a>
+    </div>
+
+    <!-- Separator -->
+    <div class="cta02__separator"></div>
+
+    <!-- CTA02 2 -->
+    <div class="cta02__item">
+      <img src="img/feedback.png" alt="Refer Icon" class="cta02__icon" />
+      <div class="head-text">
+        <p class="cta02__subtitle">Organic beauty is shared,</p>
+        <h5 class="cta02__title">Sponsor those you love!</h5>
+      </div>
+      <a href="#" class="shop-cta">
+        <span class="shop-cta__text">Refer a Friend</span>
+        <img src="img/Arrow-right dark.svg" alt="Arrow Right" class="shop-cta__icon" />
+      </a>
+    </div>
+
+    <!-- Separator -->
+    <div class="cta02__separator"></div>
+
+    <!-- CTA02 3 -->
+    <div class="cta02__item">
+      <img src="img/beauty-treatment.png" alt="Spa Icon" class="cta02__icon" />
+      <div class="head-text">
+        <p class="cta02__subtitle">Treat yourself to good weather</p>
+        <h5 class="cta02__title">at Maison Absolution</h5>
+      </div>
+      <a href="#" class="shop-cta">
+        <span class="shop-cta__text">Try Our Treatments</span>
+        <img src="img/Arrow-right dark.svg" alt="Arrow Right" class="shop-cta__icon" />
+      </a>
+    </div>
+  </section>
+
+  <section class="newsletter-cta">
+    <h2 class="newsletter-cta__title">
+      Subscribe to get 10% off<br>your first order
+    </h2>
+    <form class="newsletter-cta__form" action="#" method="post">
+      <input type="email" class="newsletter-cta__input" placeholder="Drop your email here" required />
+      <button type="submit" class="newsletter-cta__button">
+        <img src="img/Arrow-right dark.svg" alt="Arrow-right" class="arrow-cta">
+      </button>
+    </form>
+  </section>
+
+  <footer class="footer">
+    <div class="footer__top">
+      <div class="footer__brand">
+        <img src="logo.svg" alt="VELVETY logo" class="footer__logo" />
+        <p class="footer__subtitle">Opening hours</p>
+        <p class="footer__hours">Monday to Saturday:<br>10:30 a.m. to 7 p.m.</p>
+        <div class="footer__socials">
+          <a href="#"><img src="icon-instagram.svg" alt="Instagram" /></a>
+          <a href="#"><img src="icon-twitter.svg" alt="Twitter" /></a>
+          <a href="#"><img src="icon-facebook.svg" alt="Facebook" /></a>
+        </div>
+      </div>
+
+      <div class="footer__column">
+        <h4 class="footer__heading">Shop</h4>
+        <ul class="footer__list">
+          <li><a href="#">Skincare</a></li>
+          <li><a href="#">Facial</a></li>
+          <li><a href="#">Soap</a></li>
+          <li><a href="#">Candles</a></li>
+          <li><a href="#">Auto Fragrances</a></li>
+          <li><a href="#">Gifts</a></li>
+        </ul>
+      </div>
+
+      <div class="footer__column">
+        <h4 class="footer__heading">Help Desk</h4>
+        <ul class="footer__list">
+          <li><a href="#">Chat</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Shipping & Returns</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Policies</a></li>
+          <li><a href="#">Accessibility</a></li>
+          <li><a href="#">My Account</a></li>
+        </ul>
+      </div>
+
+      <div class="footer__column">
+        <h4 class="footer__heading">Stores</h4>
+        <ul class="footer__list">
+          <li><a href="#">Manhattan</a></li>
+          <li><a href="#">Brooklyn</a></li>
+          <li><a href="#">Tokyo</a></li>
+          <li><a href="#">Jakarta</a></li>
+          <li><a href="#">Paris</a></li>
+          <li><a href="#">Buenos Aires</a></li>
+        </ul>
+      </div>
+
+      <div class="footer__credit">
+        <p class="footer__credit--items">SITE CREDIT</p>
+        <p class="footer__credit--items">©2023 VELVETY</p>
+      </div>
+    </div>
+
+    <div class="footer__bottom">
+      <p class="footer__designed">
+        Designed by <a href="#">DhuhaCreative</a>. Powered by <a href="#">UI8</a>.
+      </p>
+      <ul class="footer__links">
+        <li><a href="#">Licenses</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+    </div>
+  </footer>
+
+
 
 </body>
 
